address content width issue in panels with reduced spacing

--- a/src/features/Sidebar/components/ContextPanel/ContextPanel.module.scss
+++ b/src/features/Sidebar/components/ContextPanel/ContextPanel.module.scss
@@ -37,7 +37,7 @@
   &.reduceSpacing {
     .content {
       padding: 0;
-      width: $panelWidth;
+      width: calc($panelWidth - 1px);
     }
     .header {
       margin-bottom: 0;
